libview: "<Ctrl>Home/End" move the caret to the start/end of the document

https://bugzilla.gnome.org/show_bug.cgi?id=724273